# Test_githubaction

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: main.cpp
tests/: test_main.cpp  testcase.txt
